Bug 411132: Error 5.5.4 on sending to MS Exchange server due to newlines in hostname r+sr=bienvenu